@@ -1,4 +1,4 @@
-/*	$OpenBSD: session.h,v 1.10 2001/06/27 02:12:54 markus Exp $	*/
+/*	$OpenBSD: session.h,v 1.11 2001/07/02 13:59:15 markus Exp $	*/
 
 /*
  * Copyright (c) 2000, 2001 Markus Friedl.  All rights reserved.
@@ -32,5 +32,6 @@ int	 session_open(Authctxt*, int);
 void	 session_input_channel_req(int, void *);
 void	 session_close_by_pid(pid_t, int);
 void	 session_close_by_channel(int, void *);
+int	 session_have_children(void);
 
 #endif
