@@ -114,6 +114,10 @@
    - stevesk@cvs.openbsd.org 2001/06/30 18:08:40
      [channels.c channels.h clientloop.c]
      adress -> address; ok markus@
+   - markus@cvs.openbsd.org 2001/07/02 13:59:15
+     [serverloop.c session.c session.h]
+     wait until !session_have_children(); bugreport from 
+     Lutz.Jaenicke@aet.TU-Cottbus.DE
  
 20010629
  - (bal) Removed net_aton() since we don't use it any more
@@ -5941,4 +5945,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1372 2001/07/04 05:15:15 mouring Exp $
+$Id: ChangeLog,v 1.1373 2001/07/04 05:17:40 mouring Exp $
